[package]
name = "is-geo-boolops-still-broken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", features = ["wayland"] }
bevy-inspector-egui = "0.19"
bevy_egui = "0.21"
bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking" }
bevy_prototype_lyon = "0.9"
geo = { version = "0.26", features = ["serde"] }
rand = "0.8"
glam = {version = "0.24", features = ["rand"]}
nalgebra = "0.31"
spade = "2.2"
geo-svg = "0.5"
serde_json = "1.0"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

[patch.crates-io]
geo = { git = "https://github.com/RobWalt/geo.git", branch = "feat/spade-boolops" }
